--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <p>Visita nuestra galería o envianos un mensaje. Te atenderemos a la brevedad</p>
                 </div>
                 <div class="col-lg-2">
-                    <a class="btn pull-right btn-dark btn-lg margin-top" href="#">Has un pedido</a>
+                    <a class="btn pull-right btn-dark btn-lg margin-top" href="barnices.html">Has un pedido</a>
                 </div>
             </div><!-- end messagebox -->
 	
@@ -596,10 +596,10 @@
                         </div><!-- end contact_widget -->
                     </div><!-- end widget -->
                     <div class="social-icons">
-                            <span class="facebook"><a data-toggle="tooltip" data-placement="bottom" title="Facebook" href="#"><i class="fa fa-facebook"></i></a></span>
-                            <span class="google-plus"><a data-toggle="tooltip" data-placement="bottom" title="Google Plus" href="#"><i class="fa fa-google-plus"></i></a></span>
-                            <span class="twitter"><a data-toggle="tooltip" data-placement="bottom" title="Twitter" href="#"><i class="fa fa-twitter"></i></a></span>
-                            <span class="linkedin"><a data-toggle="tooltip" data-placement="bottom" title="Linkedin" href="#"><i class="fa fa-linkedin"></i></a></span>
+                            <span class="facebook"><a data-toggle="tooltip" data-placement="bottom" title="Facebook" href="https://www.facebook.com/?ref=tn_tnmn" target="_blank" ><i class="fa fa-facebook"></i></a></span>
+                            <span class="google-plus"><a data-toggle="tooltip" data-placement="bottom" title="Google Plus" href="https://plus.google.com/up/accounts/upgrade/?continue=https://plus.google.com/people" target="_blank" ><i class="fa fa-google-plus"></i></a></span>
+                            <span class="twitter"><a data-toggle="tooltip" data-placement="bottom" title="Twitter" href="https://twitter.com/login?lang=es" target="_blank" ><i class="fa fa-twitter"></i></a></span>
+                            <span class="linkedin"><a data-toggle="tooltip" data-placement="bottom" title="Linkedin" href="https://www.linkedin.com/uas/login" target="_blank" ><i class="fa fa-linkedin"></i></a></span>
                         </div><!-- end social icons -->
                 </div><!-- end col -->    
             </div><!-- end row -->
