--- a/barnices.html
+++ b/barnices.html
@@ -55,10 +55,10 @@
                 </div><!-- end col -->
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="topbar_social pull-right">
-                        <span class="facebook"><a data-toggle="tooltip" data-placement="bottom" title="Facebook" href="https://es-la.facebook.com/"><i class="fa fa-facebook"></i></a></span>
+                        <span class="facebook"><a data-toggle="tooltip" data-placement="bottom" title="Facebook" href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></span>
                         
-                        <span class="twitter"><a data-toggle="tooltip" data-placement="bottom" title="Twitter" href="https://twitter.com/login?lang=es"><i class="fa fa-twitter"></i></a></span>
-                        <span class="linkedin"><a data-toggle="tooltip" data-placement="bottom" title="youtube" href="https://www.youtube.com/"><i class="fa fa-youtube"></i></a></span>
+                        <span class="twitter"><a data-toggle="tooltip" data-placement="bottom" title="Twitter" href="https://twitter.com/login?lang=es" target="_blank"><i class="fa fa-twitter"></i></a></span>
+                        <span class="linkedin"><a data-toggle="tooltip" data-placement="bottom" title="youtube" href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a></span>
                         
                     </div><!-- end social icons -->
                 </div><!-- end col -->
@@ -375,9 +375,9 @@
                     </div><!-- end widget -->
                     <div class="social-icons">
                             <span class="facebook"><a data-toggle="tooltip" data-placement="bottom" title="Facebook" href="#"><i class="fa fa-facebook"></i></a></span>
-                            <span class="google-plus"><a data-toggle="tooltip" data-placement="bottom" title="Google Plus" href="#"><i class="fa fa-google-plus"></i></a></span>
-                            <span class="twitter"><a data-toggle="tooltip" data-placement="bottom" title="Twitter" href="#"><i class="fa fa-twitter"></i></a></span>
-                            <span class="linkedin"><a data-toggle="tooltip" data-placement="bottom" title="Linkedin" href="#"><i class="fa fa-linkedin"></i></a></span>
+                            <span class="google-plus"><a data-toggle="tooltip" data-placement="bottom" title="Google Plus" href="https://plus.google.com/about?hl=es-419" target="_blank"><i class="fa fa-google-plus"></i></a></span>
+                            <span class="twitter"><a data-toggle="tooltip" data-placement="bottom" title="Twitter" href="https://twitter.com/login?lang=es" target="_blank"><i class="fa fa-twitter"></i></a></span>
+                            <span class="linkedin"><a data-toggle="tooltip" data-placement="bottom" title="Linkedin" href="https://www.linkedin.com/uas/login" target="_blank"><i class="fa fa-linkedin"></i></a></span>
                         </div><!-- end social icons -->
                 </div><!-- end col -->    
             </div><!-- end row -->
