--- a/nosotros.html
+++ b/nosotros.html
@@ -55,10 +55,10 @@
                 </div><!-- end col -->
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="topbar_social pull-right">
-            <span class="facebook"><a data-toggle="tooltip" data-placement="bottom" title="Facebook" href="https://es-la.facebook.com/" href="_blank"><i class="fa fa-facebook"></i></a></span>
+            <span class="facebook"><a data-toggle="tooltip" data-placement="bottom" title="Facebook" href="https://es-la.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></span>
             
-            <span class="twitter"><a data-toggle="tooltip" data-placement="bottom" title="Twitter" href="https://twitter.com/login?lang=es" href="_blank"><i class="fa fa-twitter"></i></a></span>
-            <span class="linkedin"><a data-toggle="tooltip" data-placement="bottom" title="youtube" href="https://www.youtube.com/" href="_blank"><i class="fa fa-youtube"></i></a></span>
+            <span class="twitter"><a data-toggle="tooltip" data-placement="bottom" title="Twitter" href="https://twitter.com/login?lang=es" target="_blank"><i class="fa fa-twitter"></i></a></span>
+            <span class="linkedin"><a data-toggle="tooltip" data-placement="bottom" title="youtube" href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a></span>
             
           </div><!-- end social icons -->
                 </div><!-- end col -->
