--- a/blog-1.html
+++ b/blog-1.html
@@ -88,10 +88,10 @@
                            <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">PRODUCTOS</a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="barnices.html">Barnices</a></li>
-                                <li><a href="barnices.html">Placas Aislantes</a></li>
-                                <li><a href="barnices.html">Teflón</a></li>
-                                <li><a href="barnices.html">Silicona</a></li>
-                                <li><a href="barnices.html">Otros materiales Aislantes</a></li>
+                                <li><a href="placasaislantes.html">Placas Aislantes</a></li>
+                                <li><a href="teflon.html">Teflón</a></li>
+                                <li><a href="silicona.html">Silicona</a></li>
+                                <li><a href="otrosmate.html">Otros materiales Aislantes</a></li>
                                 <!--<li><a href="shop-cart.html">Shopping Cart</a></li> -->             
                             </ul><!-- end dropdown-menu -->
                         </li><!-- end standard drop down -->
